-------
* ??-Oct-2014

Fixed wxPython bug on OSX that was preventing the wx.App's virtual
methods related to handling App Events, like open-files or reopen-app,
from being handled correctly.  

NOTE: It appears that wxPython applications on OSX will now always be
getting an initial Apple Event(s) sent to MacOpenFiles coresponding to
the name of the script and args on the python command-line.



3.0.1.1
-------
* 9-Sept-2014

The previous release managed to escape out into the wild before the
3rdPart addons were updated from the source repository.  This release
includes the newest code from AGW and FloatCanvas which should have
been in the last release.

Fixed "wxPyHtmlWinTagHandler, no destructor found." error.



3.0.1.0
-------
* 6-Sept-2014

Turned on a workaround for a bug that caused crashes on Windows XP.
This was due to a Micorsoft bug in optimizing access to TLS when a
DLL is dynamically loaded at runtime with LoadLibrary, such as how
Python extension modules are loaded.  See
http://trac.wxwidgets.org/ticket/13116

Fixed "wxPyXmlSubclassFactory, no destructor found." error.

Some Pubsub and AGW updates.

Ignore some code in wxOSX that was preventing stock data format IDs
from being used with custom data objects. (See
https://groups.google.com/forum/#!topic/wx-dev/wFxevpvbhvQ/discussion) 

Various other fixes and enhancements from wxWidgets.



3.0.0
-------
* 25-Dec-2013

Merry Christmas (or your December holiday of choice)!

No new features but lots of bug fixes in wxWidgets and of course the
bump (finally!) up to 3.0.




2.9.5.0
-------
* 31-Aug-2013

wx.media.MediaCtrl on OSX-cocoa now has a functioning back-end using
the QTKit framework, so it works when running in either 32-bit or
64-bit mode.

Printing triggered from a Javascript window.print() statement will now
work on OSX when using the old wx.webkit or the new wx.html2 browser
controls. 

Updated Scintilla code to verison 3.21

Lots of fixes and improvements in the wxWidgets code.
