@@ -47,7 +47,7 @@ demo item so you can learn how to use the classes yourself.</p>
     def __init__(self, parent):
         wx.Dialog.__init__(self, parent, -1, 'About the wxPython demo',)
         html = wx.html.HtmlWindow(self, -1, size=(420, -1))
-        if "gtk2" in wx.PlatformInfo:
+        if "gtk2" in wx.PlatformInfo or "gtk3" in wx.PlatformInfo:
             html.SetStandardFonts()
         py_version = sys.version.split()[0]
         txt = self.text % (wx.VERSION_STRING,
