@@ -16,7 +16,7 @@ class MyHtmlWindow(html.HtmlWindow):
     def __init__(self, parent, id, log):
         html.HtmlWindow.__init__(self, parent, id, style=wx.NO_FULL_REPAINT_ON_RESIZE)
         self.log = log
-        if "gtk2" in wx.PlatformInfo:
+        if "gtk2" in wx.PlatformInfo or "gtk3" in wx.PlatformInfo:
             self.SetStandardFonts()
 
     def OnLinkClicked(self, linkinfo):
