@@ -44,6 +44,8 @@ def version():
         port = 'gtk'
         if 'gtk2' in wx.PlatformInfo:
             port = 'gtk2'
+        elif 'gtk3' in wx.PlatformInfo:
+            port = 'gtk3'
     else:
         port = '?'
 
