@@ -1527,7 +1527,7 @@ later.", "");
     %extend {
         void SetDoubleBuffered(bool on)
         {
-        %#if defined(__WXGTK20__) || defined(__WXMSW__)
+        %#if defined(__WXGTK20__) || defined(__WXGTK3__) || defined(__WXMSW__)
             self->SetDoubleBuffered(on);
         %#endif
         }
