@@ -28,9 +28,15 @@
 #ifdef __WXGTK__
 #include <gtk/gtk.h>
 #include <gdk/gdkx.h>
+#ifdef __WXGTK3__
+#define GetXWindow(wxwin) (wxwin)->m_wxwindow ? \
+                          GDK_WINDOW_XID(gtk_widget_get_window((wxwin)->m_wxwindow)) :	\
+                          GDK_WINDOW_XID(gtk_widget_get_window((wxwin)->m_widget))
+#else
 #define GetXWindow(wxwin) (wxwin)->m_wxwindow ? \
                           GDK_WINDOW_XWINDOW((wxwin)->m_wxwindow->window) : \
                           GDK_WINDOW_XWINDOW((wxwin)->m_widget->window)
+#endif
 #include <locale.h>
 #endif
 
@@ -864,7 +870,9 @@ PyObject* __wxPySetDictionary(PyObject* /* self */, PyObject* args)
     _AddInfoString("wxOSX-cocoa");
 #endif
 #ifdef __WXGTK__
-#ifdef __WXGTK20__
+#ifdef __WXGTK3__
+    _AddInfoString("gtk3");
+#elif __WXGTK20__
     _AddInfoString("gtk2");
 #else
     _AddInfoString("gtk1");
