@@ -117,14 +117,21 @@ def ContextFromDC(dc):
     
 
     elif 'wxGTK' in wx.PlatformInfo:
-        gdkLib = _findGDKLib()
+        if 'gtk3' in wx.PlatformInfo:
+            # With wxGTK3, GetHandle() returns a cairo context directly
+            ctxptr = voidp( dc.GetHandle() )
 
-        # Get the GdkDrawable from the dc
-        drawable = voidp( dc.GetHandle() )
+            # pyCairo will try to destroy it so we need to increase ref count
+            cairoLib.cairo_reference(ctxptr)
+        else:
+            gdkLib = _findGDKLib()
 
-        # Call a GDK API to create a cairo context
-        gdkLib.gdk_cairo_create.restype = ctypes.c_void_p
-        ctxptr = gdkLib.gdk_cairo_create(drawable)
+            # Get the GdkDrawable from the dc
+            drawable = voidp( dc.GetHandle() )
+
+            # Call a GDK API to create a cairo context
+            gdkLib.gdk_cairo_create.restype = ctypes.c_void_p
+            ctxptr = gdkLib.gdk_cairo_create(drawable)
 
         # Turn it into a pycairo context object
         ctx = pycairoAPI.Context_FromContext(ctxptr, pycairoAPI.Context_Type, None)
@@ -316,7 +323,11 @@ def _findHelper(names, key, msg):
 
 
 def _findGDKLib():
-    return _findHelper(['gdk-x11-2.0'], 'gdk',
+    if 'gtk3' in wx.PlatformInfo:
+        libname = 'gdk-3'
+    else:
+        libname = 'gdk-x11-2.0'
+    return _findHelper([libname], 'gdk',
                        "Unable to find the GDK shared library")
 
 def _findPangoCairoLib():
